--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-<<<<<<< HEAD
     "@fontsource/roboto": "^5.1.0",
-=======
->>>>>>> main
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.0",
-<<<<<<< HEAD
-<<<<<<< HEAD
     "@reduxjs/toolkit": "^2.4.0",
-=======
-    "@reduxjs/toolkit": "^2.5.0",
->>>>>>> main
-=======
-    "@reduxjs/toolkit": "^2.4.0",
->>>>>>> main
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
     "jwt-decode": "^4.0.0",
