--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,12 @@
     "@mui/material": "^6.2.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.18.0",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
