--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.18.0",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
+    "npm": "^10.9.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
