--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
